--- a/cv.tex
+++ b/cv.tex
@@ -114,7 +114,7 @@ Thesis: Qt-based application: Text Editor.
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Programming Languages & Fortran, C Language, Java, Python, Bash, SQL \\
-Softwares  & Thermo-Calc, Matlab, Eclipse, Github, ANSYS, TotalView, Vim, Latex \\
+Softwares  & Thermo-Calc, Matlab, Eclipse, Github, ANSYS, TotalView, Latex \\
 Operating Systems & Windows, Linux, Mac \\
 Others & Lapack and Blas Libraries, High Performance Computing, \\
        & Parallel Programming
@@ -188,11 +188,12 @@ Liaoning Provincial Outstanding class cadre (2006)
 
 \newpage
 
-\begin{comment}
+%\begin{comment}
  
 
 
 \begin{rSection}{References}
+
 
 {\bf Prof. Börje Johansson} \\
 Applied Materials Physics \\
@@ -201,13 +202,19 @@ KTH Royal Institute of Technology \\
 SE – 100 44 Stockholm, Sweden  \\
 Phone: +46 (0) 70 417 54 52 \\
 Email: borje.johansson@physics.uu.se \\
-       borjej@kth.se
+  \hspace*{11.5mm}     borjej@kth.se \\
+  
+
 
 {\bf Prof. Clas Persson} \\
 Multiscale Materials Modelling \\
 Department of Materials Science and Engineering \\
 KTH Royal Institute of Technology \\
 SE – 100 44 Stockholm, Sweden \\
+ -- and -- \\
+Department of Physics \\
+University of Oslo \\
+NO-0316 Oslo, Norway \\
 Phone: +46 (0)8-790 8332\\
 Email: Clas.Persson@mse.kth.se \\
 
@@ -232,7 +239,7 @@ Email: huahai@kth.se \\
 
 \end{rSection}
 
-\end{comment}
+%\end{comment}
 
 
 \end{document}
