--- a/cv.tex
+++ b/cv.tex
@@ -39,12 +39,20 @@
 %\pagestyle{fancy}
 
 \newcommand\BackgroundPic{
-\put(430,555){
+\put(460,545){
 \parbox[t]{\textwidth}{
-\includegraphics[width=4.22cm]{kth}
+\includegraphics[width=3cm]{myself1}
 }
 }
 }
+
+%\newcommand\BackgroundPic{
+%\put(450,550){
+%\parbox[t]{\textwidth}{
+%\includegraphics[width=3cm]{myself}
+%}
+%}
+%}
 
 \begin{document}
 
