--- a/cv.tex
+++ b/cv.tex
@@ -41,9 +41,9 @@
 %\pagestyle{fancy}
 
 \newcommand\BackgroundPic{
-\put(450,570){
+\put(450,580.4){
 \parbox[t]{\textwidth}{
-\includegraphics[width=3cm]{myself3}
+\includegraphics[width=2.7cm]{myself3}
 }
 }
 }
@@ -77,6 +77,7 @@
  {\bf Address: } \hspace*{9.3mm} Arnljot Gellines vei 31 B55, Oslo \\
  {\bf Phone: } \hspace*{12.7mm}  +46 (0) 70 780 86 42  \\
  {\bf Email: } \hspace*{14mm}  Rongzhen.Chen@mse.kth.se \\ 
+
  
 
  
@@ -180,75 +181,75 @@ Email: Clas.Persson@mse.kth.se \\
 \newpage
 \begin{rSection}{PUBLICATIONS}
 
-\subsection*{Journal Papers:}
+\textbf{Journal Papers:}
  
- \begin{enumerate}
-\renewcommand{\labelenumi}{\Roman{enumi}}
+% \begin{enumerate}
+%\renewcommand{\labelenumi}{\Roman{enumi}}
 
 
 %\item{} \textbf{Parameterization of $CuIn_{1−x}Ga_{x}Se_2$ (x = 0, 0.5, and 1) energy bands}
 
-\item{}  \textbf{Parameterization of $\mathbf {CuIn_{1-\textit{x}}Ga_\textbf{\textit{x}}Se_2}$ (\textbf{\textit{x}} = 0, 0.5, and 1) energy bands}
+I \textbf{Parameterization of $\mathbf {CuIn_{1-\textit{x}}Ga_\textbf{\textit{x}}Se_2}$ (\textbf{\textit{x}} = 0, 0.5, and 1) energy bands}
 \\\textbf{R. Chen} and C. Persson, \textit{Thin Solid Films} {\textbf {519}}, 7503 (2011).
 
 
 
-\item{}\textbf{Band-edge density-of-states and carrier concentrations in intrinsic and $p$-type $\mathbf {CuIn_{1-\textit{x}}Ga_\textbf{\textit{x}}Se_2}$}
+II \textbf{Band-edge density-of-states and carrier concentrations in intrinsic and $p$-type $\mathbf {CuIn_{1-\textit{x}}Ga_\textbf{\textit{x}}Se_2}$}
 \\\textbf{R. Chen} and C. Persson, \textit{Journal of Applied Physics} {\textbf {112}}, 103708 (2012).
 
-\item{} \textbf{Dielectric function spectra at 40 K and critical-point energies for $\mathbf {CuIn_{0.7}Ga_{0.3}Se_2}$}
+III \textbf{Dielectric function spectra at 40 K and critical-point energies for $\mathbf {CuIn_{0.7}Ga_{0.3}Se_2}$}
 \\ S.G. Choi, \textbf{R. Chen}, C. Persson, T.J. Kim, S.Y. Hwang, Y.D. Kim, and L.M. Mansfield,
 \textit{Applied Physics Letters} {\textbf {101}}, 261903 (2012).
 
-\item{} \textbf{Dielectric function and double absorption onset in monoclinic $\mathbf {Cu_{2}SnS_{3}}$: origin of experimental features explained by first-principles calculations}
+IV \textbf{Dielectric function and double absorption onset in monoclinic $\mathbf {Cu_{2}SnS_{3}}$: origin of experimental features explained by first-principles calculations}
 \\ A. Crovetto, \textbf{R. Chen}, R.B. Ettlinger, A.C. Cazzaniga, J. Schou, C. Persson, O. Hansen,
 \textit{Solar Energy Materials and Solar Cells} {\textbf {154}}, 121 (2016).
 
-\item{} \textbf{Exploring the electronic and optical properties of $\mathbf {Cu_{2}Sn_{1-\textit{x}}Ge_\textbf{\textit{x}}S_{3}}$ and $\mathbf {Cu_{2}Sn_{1-\textit{x}}Si_\textbf{\textit{x}}S_{3}}$ (\textbf{\textit{x}} = 0, 0.5, and 1)}
+V \textbf{Exploring the electronic and optical properties of $\mathbf {Cu_{2}Sn_{1-\textit{x}}Ge_\textbf{\textit{x}}S_{3}}$ and $\mathbf {Cu_{2}Sn_{1-\textit{x}}Si_\textbf{\textit{x}}S_{3}}$ (\textbf{\textit{x}} = 0, 0.5, and 1)}
 \\ \textbf{R. Chen} and C. Persson, accepted by \textit{Physica Status Solidi (c)} (2016).
 
-\item{} \textbf{Electronic and optical properties of $\mathbf {Cu_{2}}$\textbf{\textit{X}}$\mathbf {SnS_{4}}$ (\textbf{\textit{X}} = Be, Mg, Ca, Mn, Fe, and Ni) and the impact of native defect pairs}
+VI \textbf{Electronic and optical properties of $\mathbf {Cu_{2}}$\textbf{\textit{X}}$\mathbf {SnS_{4}}$ (\textbf{\textit{X}} = Be, Mg, Ca, Mn, Fe, and Ni) and the impact of native defect pairs}
 \\ \textbf{R. Chen} and C. Persson, submitted to \textit{Journal of Applied Physics} (2017).
 
-\item{} \textbf{High absorption coefficients of the $\mathbf {CuSb(Se,Te)_2}$ and $\mathbf {CuBi(S,Se)_2}$ alloys enable high efficient 100 nm thin-film photovoltaics}
+VII \textbf{High absorption coefficients of the $\mathbf {CuSb(Se,Te)_2}$ and $\mathbf {CuBi(S,Se)_2}$ alloys enable high efficient 100 nm thin-film photovoltaics}
 \\ \textbf{R. Chen} and C. Persson, submitted to \textit{EPJ Photovoltaics} (2017).
 
-\item{} \textbf{Investigation of the structural, optical and electronic properties of $\mathbf{Cu_2}\mathbf{Zn(Sn,Si/Ge)}\mathbf{(S/Se)_4}$ alloys for solar cell applications}
+VIII \textbf{Investigation of the structural, optical and electronic properties of $\mathbf{Cu_2}\mathbf{Zn(Sn,Si/Ge)}\mathbf{(S/Se)_4}$ alloys for solar cell applications}
 \\ S. Zamulko, \textbf{R. Chen} and C. Persson, accepted by \textit{Physica Status Solidi (b)} (2017).
 
 
 
-\renewcommand{\labelenumi}{\Roman{enumi}}
-\setcounter{enumi}{0}
+%\renewcommand{\labelenumi}{\Roman{enumi}}
+%\setcounter{enumi}{0}
 
-\subsection*{Book Chapter:}
+\textbf{Book Chapter:}
 
-\item{}\textbf{Electronic structure and optical properties from first-principles modeling} \\
+I \textbf{Electronic structure and optical properties from first-principles modeling} \\
 C. Persson, \textbf{R. Chen}, H. Zhao, M. Kumar, and D. Huang, Chapter in ''Copper zinc tin sulphide-based thin film solar cells'',
 edited by K. Ito, p. 75$-$106 ({\textit John Wiley $\&$ Sons}, 2015).
 
 
 %\end{enumerate}
 
-\subsection*{International Conference Contributions:}
+\textbf{International Conference Contributions:}
 
 %\begin{enumerate}
 
 
-\renewcommand{\labelenumi}{\Roman{enumi}}
-\setcounter{enumi}{0}
+%\renewcommand{\labelenumi}{\Roman{enumi}}
+%\setcounter{enumi}{0}
 
-\item{} \textbf{Band structure and optical properties of $\mathbf {CuInSe_2}$}
+I \textbf{Band structure and optical properties of $\mathbf {CuInSe_2}$}
 \\ \textbf{R. Chen} and C. Persson,
 \textit{Advanced Materials Research Journal} {\textbf {894}}, 254 (2014). \\
 \textit{4th International Conference on Advanced Materials Research (ICAMR$-$4), Macao, China, 23$-$24 Jan. 2014.}
 
-\item{} \textbf{Electronic modeling and optical properties of $\mathbf {CuIn_{0.5}Ga_{0.5}Se_2}$ thin film solar cell}
+II \textbf{Electronic modeling and optical properties of $\mathbf {CuIn_{0.5}Ga_{0.5}Se_2}$ thin film solar cell}
 \\ \textbf{R. Chen} and C. Persson,
 \textit{Journal of Applied Mathematics and Physics} {\textbf 2}, 41 (2014). \\
 \textit{Conference on New Advances in Condensed Matter Physics (NACMP 2014), Shenzhen, 14$-$16 Jan 2014.}
 
-\end{enumerate}
+%\end{enumerate}
 
 
 
@@ -317,35 +318,6 @@ The 6th International Workshop on Quantum Energy, Xiangtan, China.
 
 \end{rSection}
 
-
-
-\newpage
-
-\begin{rSection}{REFERENCES}
- {\bf Prof. Clas Persson} \\
-%Division of Multiscale Materials Modelling \\
-Department of Materials Science and Engineering \\
-KTH Royal Institute of Technology \\
-SE – 100 44 Stockholm, Sweden \\
- -- and -- \\
-Department of Physics \\
-University of Oslo \\
-NO-0316 Oslo, Norway \\
-Phone: +47 228 52424\\
-Email: Clas.Persson@mse.kth.se \\
-
-
-{\bf Dr. Huahai Mao} \\
-%Division of Computational Thermodynamics \\
-Department of Materials Science and Engineering \\
-KTH Royal Institute of Technology \\
-SE – 100 44 Stockholm, Sweden \\
-Phone: +46 (0)8-790 6597 \\
-Email: huahai@kth.se \\
-
- 
- 
-\end{rSection}
 
 
 
